fix header overflow

--- a/src/components/headingWithBGpic/styles.css
+++ b/src/components/headingWithBGpic/styles.css
@@ -99,6 +99,21 @@ hr{
   color: white;
 }
 
+.title_ {
+  width: 100%;
+  height: 300px;
+  border-radius: 0;
+}
+
+.centeredText_ {
+  position: absolute;
+  /* top: 50%;
+  left: 50%; */
+  transform: translate(0%, 150px);
+  text-align: center;
+  color: white;
+}
+
 .steps_container {
   /* display: flex;
     max-width: 800px; */
